test/testdata/classes/init/invalid_unary_op_error.lox
class Foo {
  init() {}
}
-Foo().init; // error: '-' operator cannot be used with type 'function'
